--- a/news/templates/news/posttemplate.html
+++ b/news/templates/news/posttemplate.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-    <title>Neutral News</title>
+    <title>{{ article.title_text }}</title>
     <!-- CSS  -->
     {% load static from staticfiles %}
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -40,38 +40,39 @@ $(document).ready(function(){
 </script>
 
 <div class="head">
-  <div class="headerobjectswrapper">
-    <header>
-      <a href="{% url 'index' %}">
-        <font color="#002868">N</font><font color="#132562">e</font><font color="#26225D">u</font><font color="#391F57">t</font><font color="#4C1C52">r</font><font color="#60194C">a</font><font color="#731646">l</font>
-        <font color="#861341">N</font><font color="#99103B">e</font><font color="#AC0D36">w</font><font color="#BF0A30">S</font>
-      </a>
-    </header>
-  </div>
-  <div class="subhead">A nearly unbiased newspaper</div>
+    <div class="headerobjectswrapper">
+        <header>
+            <a href="{% url 'index' %}">
+                <font color="#002868">N</font><font color="#132562">e</font><font color="#26225D">u</font><font color="#391F57">t</font><font color="#4C1C52">r</font><font color="#60194C">a</font><font color="#731646">l</font>
+                <font color="#861341">N</font><font color="#99103B">e</font><font color="#AC0D36">w</font><font color="#BF0A30">S</font>
+            </a>
+        </header>
+    </div>
+    <div class="subhead">A nearly unbiased newspaper</div>
 </div>
 <div class="head topbar">
-  <h4>
-    <a href="{% url 'about' %}">About</a>  |  Popular  |  Categories  | Search
-  </h4>
+    <h4>
+        <a href="{% url 'about' %}">About</a>  |  Popular  |  Categories  | Search
+    </h4>
 </div>
 
 <div class="container-fluid">
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="addthis_relatedposts_inline"></div>
     <h2>{{ article.title_text }}</h2>
     <img src="{{ article.image.url }}" style='width:100%;' border="0" alt="Null">
     <div class="chip">
-      <font color="#731646">
-        <b>
-        {{ article.conservative_author }}
-      </b>
-      </font>
+        <font color="#731646">
+            <b>
+                {{ article.conservative_author }}
+            </b>
+        </font>
     </div>
     <div class="chip">
-      <font color="#4C1C52">
-        <b>
-        {{ article.liberal_author }}
-      </b>
-      </font>
+        <font color="#4C1C52">
+            <b>
+                {{ article.liberal_author }}
+            </b>
+        </font>
     </div>
     <div class="row">
         <div class="col s12">
@@ -88,24 +89,25 @@ $(document).ready(function(){
         <a id="conservativeText" class="col s12 materialize-red-text">{{ article.conservative_opinion | safe }}</a>
         <a id="liberalText" class="col s12 indigo-text"> {{ article.liberal_opinion | safe }} </a>
     </div>
-    <div id="disqus_thread"></div>
+    <!-- Go to www.addthis.com/dashboard to customize your tools --> <div class="addthis_relatedposts_inline"></div>
     
-<script>
-
-/**
-*  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-*  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-
-var disqus_config = function () {
-//this.page.url = '{{ article.slug }}';  // Replace PAGE_URL with your page's canonical URL variable
-this.page.identifier = '{{ article.slug }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-};
-
-(function() { // DON'T EDIT BELOW THIS LINE
-var d = document, s = d.createElement('script');
-s.src = 'https://neutral-news.disqus.com/embed.js';
-s.setAttribute('data-timestamp', +new Date());
-(d.head || d.body).appendChild(s);
+    <div id="disqus_thread"></div>
+    <script>
+    
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+    
+    var disqus_config = function () {
+        //this.page.url = '{{ article.slug }}';  // Replace PAGE_URL with your page's canonical URL variable
+        this.page.identifier = '{{ article.slug }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://neutral-news.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
@@ -113,6 +115,7 @@ s.setAttribute('data-timestamp', +new Date());
 
 </div>
 </div>
-<!-- Go to www.addthis.com/dashboard to customize your tools --> <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a70d14bb26287ef"></script> 
+<!-- Go to www.addthis.com/dashboard to customize your tools -->
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5a70d14bb26287ef"></script>
 </body>
 </html>
